# Stock-Predictor-UI

./: CMakeLists.txt  README.html  README.md  README.org  main.cpp  main_window.cpp  main_window.h  predict_stock.py
csv/: amazon-stock-data.csv  apple-stock-data.csv  google-stock-data.csv  meta-stock-data.csv  microsoft-stock-data.csv  nvidia-stock-price.csv  tesla-stock-data.csv  tsmc-stock-price.csv
